--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
   <title>JJALLANG HOME</title>
   <meta charset="utf-8">
+    <style>
+      a {color:green;}
+    </style>
 </head>
 <body>
-  <h1>WELCOME TO JJALLANG HOME</h1>
-  <h2>:) hello everybody !</h2>
+  <h1>WELCOME TO <a href="index.html">JJALLANG HOME</a></h1>
+  <h2><font color="grey">:) hello everybody !</font></h2>
   <h3>Go <a href="https://www.instagram.com/imxjjallang" target="_blank" title="instagram page"> <u>INSTAGRAM</u></a></h3>
 
 <p>
